# consumer-driven-contract-testing-with-pact

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  TODO.md  dev.py  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  pact-consumer-contract-tests.yml  pact-consumer-tests.yml  pact-contract-tests.yml  pact-provider-contract-tests.yml  pact-verify-provider-contract-tests.yml  pact-verify-provider-contract.yml  pact-verify-provider.yml
docs/: system.dot
docs/architecture/c4/level_1_system_context/: ecommerce_system_context.puml
docs/architecture/c4/level_1_system_context/person/: persons.puml
docs/architecture/c4/level_2_container/: ecommerce_system_container.puml
docs/architecture/c4/level_2_container/container/: containers.puml
docs/pact/: network.dot
src/adapters/: __init__.py  clients.py  dynamodb.py  proto.py  publisher.py  settings.py  sqlalchemy.py
src/customers/: __init__.py  adapters.py  app.py  commands.py  domain.py  events.py  pact.py  pact_provider_state.py  repository.py  tomodachi_app.py  use_cases.py  views.py
src/diagram/: generate_pact_network_diagram.py  pact_network_diagram.jinja2
src/frontend/: __init__.py  client.py  customers.py  order_history.py  orders.py
src/order_history/: commands.py  data.sql  database.py  domain.py  fastapi_app.py  graphql_schema.py  models.py  pact_provider_state.py  repository.py  settings.py  tomodachi_app.py  use_cases.py  views.py
src/orders/: __init__.py  adapters.py  app.py  commands.py  domain.py  events.py  pact.py  repository.py  responses.py  tomodachi_app.py  use_cases.py  views.py
src/proto/: __init__.py  buf.gen.yaml  buf.yaml
src/proto/customers/customer_created/v1/: customer_created.proto  customer_created_pb2.py  customer_created_pb2.pyi
src/proto/customers/customer_credit_reserved/v1/: customer_credit_reserved.proto  customer_credit_reserved_pb2.py  customer_credit_reserved_pb2.pyi
src/proto/google/type/: money.proto
src/proto/order_created/v1/: order_created.proto  order_created_pb2.py
src/proto/orders/order_approved/v1/: order_approved.proto  order_approved_pb2.py  order_approved_pb2.pyi
src/proto/orders/order_created/v1/: order_created.proto  order_created_pb2.py  order_created_pb2.pyi
src/sdk/: __init__.py  orders.py
src/service_layer/tomodachi_bootstrap/: __init__.py  logger.py  middleware.py  service.py
src/tomodachi_bootstrap/: __init__.py  middleware.py  service.py
terraform-pact-broker/: pacticipant--frontend--graphql.tf  pacticipant--frontend--rest.tf  pacticipant--service-orders--rest.tf  providers.tf  teams.tf  users.tf
terraform-pact-broker/modules/pacticipant/: variables.tf
terraform-pact-broker/modules/pacticipant-webhooks/: providers.tf
terraform-pact-broker/modules/webhook--contract-requiring-verification-published/: main.tf
terraform-pact-flow/: README.md  pacticipant--service-customers--rest.tf  pacticipant--service-customers--sns.tf  pacticipant--service-orders--sns.tf
terraform-pact-flow/modules/webhook--contract-requiring-verification-published/: main.tf
terraform-pactflow/: README.md  pacticipant--frontend--graphql.tf  pacticipant--frontend--rest.tf  pacticipant--service-customers--rest.tf  pacticipant--service-customers--sns.tf  pacticipant--service-order-history--graphql.tf  pacticipant--service-order-history--sns.tf  pacticipant--service-orders--rest.tf  pacticipant--service-orders--sns.tf  providers.tf  teams.tf  users.tf  variables.tf
terraform-pactflow/modules/pacticipant/: main.tf  output.tf
terraform-pactflow/modules/pacticipant-webhooks/: main.tf  variables.tf
terraform-pactflow/modules/webhook--consumer--contract-requiring-verification-published/: main.tf  variables.tf
terraform-pactflow/modules/webhook--consumer-contract-requiring-verification-published/: main.tf  providers.tf
terraform-pactflow/modules/webhook--provider--contract-requiring-verification-published/: main.tf  variables.tf
tests/: containers.py  fakes.py  pact_helpers.py
tests/customers/: test_consumer_contract.py  test_http_provider_contract.py  test_provider_contract.py  test_rest_provider_contract.py  test_sns_consumer_contract.py  test_sns_consumer_contract__orders.py  test_sns_provider_contract.py
tests/frontend/: test_graphql_consumer_contract__order_history.py  test_http_consumer_contract.py  test_http_consumer_contract__customers.py  test_http_consumer_contract__orders.py  test_rest_consumer_contract__customers.py  test_rest_consumer_contract__orders.py
tests/order_history/: test_graphql_provider_contract.py  test_sns_consumer_contract__customers.py  test_sns_consumer_contract__orders.py
tests/orders/: test_consumer_contract.py  test_http_provider_contract.py  test_provider_contract.py  test_rest_provider_contract.py  test_sns_consumer_contract.py  test_sns_consumer_contract__customers.py  test_sns_provider_contract.py
tests/sdk/: test_http_consumer_contract.py
